# romeo_tk

./: .gitignore  CMakeLists.txt  README.md  face_detection_visp.cpp  learn_oMh.cpp  qiproject.xml  save_iMj.cpp  servo_PB_Grasp.cpp  servo_PB_Grasp_Tea.cpp  servo_PB_MB_tracker.cpp  servo_blob_tracking_visp.cpp  servo_blob_tracking_visp_LArm.cpp  servo_blob_tracking_visp_LArm_metapod.cpp  servo_blob_tracking_visp_all_head.cpp  servo_face_detection_visp.cpp  servo_face_detection_visp_head.cpp  servo_face_detection_visp_head_joint_avoidance_basic.cpp  servo_visp_LArm_6dof.cpp  test_transformations.cpp
data/: transformation.xml
data/hand_model/: RHand.blend
data/milkbox/: milkbox.0.pos  milkbox.ppm
data/objects/coca/model/: coca.cao  coca.init  coca.init.bk  coca.init.bk1  coca.xml
data/objects/milkbox/detection/: detection-config-SIFT.xml
data/objects/milkbox/model/: milkbox.0.pos  milkbox.cao  milkbox.init
data/objects/orangina/color/: oranginaHSV.txt
data/objects/orangina/model/: orangina.cao  orangina.init
data/objects/robots_pic/model/: robots_pic.cao  robots_pic.init
data/objects/robots_pic/poses/: poses.xml  poses_old.xml
data/objects/spraybox/color/: sprayboxHSV.txt
data/objects/spraybox/model/: spraybox.0.pos  spraybox.cao  spraybox.init
data/objects/star_wars_pic/model/: star_wars_pic.cao  star_wars_pic.init
data/objects/tabascobox/color/: tabascoboxHSV.txt
data/objects/tabascobox/detection/: detection-config-SIFT.xml
data/objects/tabascobox/model/: tabascobox.0.pos
data/objects/tabascobox_green/model/: tabascobox.xml  (+1 more)
demos/: CMakeLists.txt
demos/arm_servoing/: CMakeLists.txt  servo_2arms_qrcode.cpp  servo_arm_joint_avoidance.cpp  servo_arm_qrcode.cpp  servo_arm_qrcode_joint_avoidance.cpp  servo_arm_qrcode_joint_avoidance_2dFeatures.cpp  servo_arm_qrcode_manipulability.cpp  servo_blob_tracking_visp_LArm.cpp  servo_box_2arms.cpp  servo_plate_2arms.cpp  servo_plate_2arms_template.cpp
demos/arm_servoing/old/: servo_blob_tracking_visp_LArm.cpp
demos/blob_tracking/: CMakeLists.txt  servo_blob_tracking_head.cpp  servo_blob_tracking_visp.cpp  servo_blob_tracking_visp_all_head.cpp
demos/drawing/: CMakeLists.txt  draw.cpp
demos/face_detection/: CMakeLists.txt  face_detection_okao.cpp  face_detection_okao_class.cpp  face_detection_visp.cpp
demos/face_servoing/: CMakeLists.txt  servo_face_detection_okao_eyes.cpp  servo_face_detection_okao_eyes_joint_limits.cpp  servo_face_detection_okao_eyes_trunk.cpp  servo_face_detection_okao_eyes_trunk_multithread.cpp  servo_face_detection_okao_head_base_pepper.cpp  servo_face_detection_okao_head_pepper.cpp  servo_face_detection_okao_head_translation_base_pepper.cpp  servo_face_detection_visp.cpp  servo_face_detection_visp_eyes.cpp  servo_face_detection_visp_eyes_trunk_multithread.cpp  servo_face_detection_visp_head.cpp  servo_face_detection_visp_head_joint_avoidance_basic.cpp  servo_face_detection_visp_head_old.cpp  servo_face_detection_visp_head_pepper.cpp
demos/face_tracking/: CMakeLists.txt  face_detection_visp.cpp
demos/grasping/: CMakeLists.txt  grasp_box.cpp  grasp_box_bh.cpp  grasp_box_bh_blob.cpp  grasp_box_eye.cpp  grasp_boxes_2arms.cpp  grasp_boxes_2arms_move_head.cpp  grasp_tea_mbt.cpp  servo_PB_Grasp.cpp  servo_PB_Grasp_Tea.cpp  servo_PB_grasp_tracking_tea.cpp  servo_PB_grasp_tracking_tea_move_head.cpp  servo_PB_grasp_tracking_tea_move_head_init_sens.cpp
demos/grasping/old/: grasp_box.cpp  grasp_tea_mbt.cpp  servo_PB_grasp_tracking_tea.cpp  servo_PB_grasp_tracking_tea_move_head.cpp  servo_PB_grasp_tracking_tea_move_head_init_sens.cpp
grasping/: servo_PB_grasp_tracking_tea.cpp  servo_PB_grasp_tracking_tea_move_head.cpp
src/common/: vpBlobsTargetTracker.cpp  vpBlobsTargetTracker.h  vpCartesianDisplacement.cpp  vpCartesianDisplacement.h  vpColorDetection.cpp  vpColorDetection.h  vpFaceTracker.cpp  vpFaceTracker.h  vpFaceTrackerOkao.cpp  vpFaceTrackerOkao.h  vpJointLimitAvoidance.h  vpMBDetection.cpp  vpMBDetection.h  vpMbLocalization.cpp  vpMbLocalization.h  vpPepperFollowPeople.cpp  vpPepperFollowPeople.h  vpQRCodeTracker.cpp  vpQRCodeTracker.h  vpRomeoTkConfig.h.cmake  vpServoArm.cpp  vpServoArm.h  vpServoHead.cpp  vpServoHead.h  vpTemplateLocatization.cpp  vpTemplateLocatization.h  vpTemplateTracker.cpp  vpTemplateTracker.h
tests/: CMakeLists.txt  barcode-detector-live.cpp  color_detection_romeo.cpp  dcm_test.cpp  detection-object-mbt.cpp  detection-object-mbt_class.cpp  get_pose_plot.cpp  get_velocity.cpp  motion_romeo.cpp  people_perception.cpp  qrcode_detector_romeo.cpp  red_ball_detection_romeo.cpp  sound_localization.cpp  speech.cpp  speech_recognition.cpp  template_tracker_test.cpp  test_calibration.cpp  test_jacobian_Pepper.cpp  test_leds.cpp  test_pepper_follow_me.cpp  test_pepper_follow_me_add_words.cpp  test_transformations.cpp  tracker_cylinder.cpp  tracking_box_color.cpp  vpBlobsTargetTrackerExample.cpp  vpBlobsTargetTracker_two_cameras.cpp  vpColoDetectionExample.cpp
tests/audio/: CMakeLists.txt  audio_compute_snr.cpp  audio_test.cpp  audio_test_base.cpp  audio_test_romeo.cpp  audio_test_romeo_neck.cpp  audio_test_romeo_neckYaw.cpp  ild_only_pepper.cpp
tools/: CMakeLists.txt
tools/calibration/3d-grid/: CMakeLists.txt  HOWTO  calibrate3dGrid-Lagadic.cpp  data-acquisition.cpp
tools/calibration_hand_qr_code/: CMakeLists.txt  pose_from_2_qrcode.cpp
tools/learning_pose/: CMakeLists.txt  learn_oMh_internal_sensor.cpp
(+16 files in other folders)
